ni-libraries/include/FRC_NetworkCommunication/LoadOut.h

    uint32_t EXPORT_FUNC FRC_NetworkCommunication_nLoadOut_getModulePresence(uint32_t moduleType, uint8_t moduleNumber);
    uint32_t EXPORT_FUNC FRC_NetworkCommunication_nLoadOut_getTargetClass();